--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ sdist/
 var/
 .installed.cfg
 *.egg
+*.egg-info/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
