decoupling tox and travis; going back to py33

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,10 @@
 language: python
-matrix:
-  include:
-    - python: 2.7
-      env:
-        - TOXENV=py27
-    - python: 3.4
-      env:
-        - TOXENV=py34
-    - python: 3.5
-      env:
-        - TOXENV=py35
-    - python: 3.6
-      env:
-        - TOXENV=py36
-install:
-  - pip install tox
+python:
+  - "2.7"
+  - "3.3"
+  - "3.4"
+  - "3.5"
+  - "3.6"
 script:
-  - tox -e $TOX_ENV
+  - python setup.py test
 sudo: false
