--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,15 @@
 language: python
 python:
-  - "2.7"
+  - "2.7_with_system_site_packages"
   - "3.3"
   - "3.4"
   - "3.5"
   - "3.6"
+before_install:
+  - sudo apt-get update -qq
+  - if [[ $TRAVIS_PYTHON_VERSION == "2.7_with_system_site_packages" ]]; then sudo apt-get install -qq python-numpy; fi
+install:
+  - pip install numpy>=1.9.2
 script:
   - python setup.py test
 sudo: false
